<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inroom_host">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="539dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/storyTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/storyTxt"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/descriptionTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/descriptionTxt"
                    android:textSize="15dp" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="330dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp">

                </ListView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="192dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/stopPollButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/stopPollBtnText" />

                <Button
                    android:id="@+id/viewStatisticsBtnTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/statisticsActBtnTxt" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>